# fastapi_react

./: .gitignore  .gitpod.yml
backend/: main.py  pyproject.toml
backend/app/: api.py
backend/next_fastapi/app/: api.py
backend/tests/: test_next_fastapi.py
frontend/: package-lock.json  package.json
frontend/pages/: index.js
