[tool.poetry]
name = "next_fastapi"
version = "0.1.0"
description = "Just trying to get better at react & fastapi."
authors = ["Dave Shoup <dave.shoup@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
